Change OrderDetail and ShoppingCart

--- a/PizzaDemo/Areas/Admin/Views/Order/Details.cshtml
+++ b/PizzaDemo/Areas/Admin/Views/Order/Details.cshtml
@@ -101,7 +101,7 @@
                                                 <h6 class="my-0 text-primary">@detail.Product.Name</h6>
                                                 <small class="text-muted">價格：@detail.Price.ToString("c")</small><br />
                                                 <small class="text-muted">數量：@detail.Count</small><br />
-                                                <small class="text-muted">尺寸：@detail.Size</small><br />
+                                                <small class="text-muted">起司：@detail.Cheese</small><br />
                                                 <small class="text-muted">餅皮：@detail.Crust</small>
                                             </div>
                                             <div class="col-4">
