--- a/PizzaDemo/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/PizzaDemo/Areas/Customer/Views/Cart/Summary.cshtml
@@ -64,7 +64,7 @@
 											<h6 class="my-0">@details.Product.Name</h6>
 											<small class="text-muted">數量 : @details.Count</small>
 											<br>
-											<small class="text-muted">尺寸 : @details.Size</small>
+											<small class="text-muted">起司 : @details.Cheese</small>
 											<br>
 											<small class="text-muted">餅皮 : @details.Crust</small>
 										</div>
