--- a/PizzaDemo/Areas/Customer/Views/Home/Details.cshtml
+++ b/PizzaDemo/Areas/Customer/Views/Home/Details.cshtml
@@ -19,37 +19,37 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        尺寸 Size
+                                        起司 Cheese
                                     </button>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
                                             <label class="form-check-label" for="SmallSize">
-                                                小 Small
+                                                莫札瑞拉起司 Mozzarella Cheese
                                             </label>
-                                            <input asp-for="Size" class="form-check-input" type="radio" name="size" id="SmallSize" value="小 Small" checked>
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="MozzarellaCheese" value="小 Small" checked>
                                         </div>
                                         <hr />
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
                                             <label class="form-check-label" for="MediumSize">
-                                                中 Medium
+                                                帕馬森起司 Parmesan
                                             </label>
-                                            <input asp-for="Size" class="form-check-input" type="radio" name="size" id="MediumSize" value="中 Medium">
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="Parmesan" value="中 Medium">
                                         </div>
                                         <hr />
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
                                             <label class="form-check-label" for="LargeSize">
-                                                大 Large
+                                                瑞士起司 Swiss Cheese
                                             </label>
-                                            <input asp-for="Size" class="form-check-input" type="radio" name="size" id="LargeSize" value="大 Large">
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="SwissCheese" value="大 Large">
                                         </div>
                                         <hr />
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
                                             <label class="form-check-label" for="FamilySize">
-                                                家庭號 Family Size
+                                                無起司 No Cheese
                                             </label>
-                                            <input asp-for="Size" class="form-check-input" type="radio" name="size" id="FamilySize" value="家庭號 Family Size">
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="No Cheese" value="家庭號 Family Size">
                                         </div>
                                         <hr />
                                     </div>
