--- a/PizzaDemo/Areas/Customer/Views/Cart/Index.cshtml
+++ b/PizzaDemo/Areas/Customer/Views/Cart/Index.cshtml
@@ -26,7 +26,7 @@
                         <div class="col-12 col-lg-4 pt-md-3">
                             <h5><strong>產品名稱</strong></h5>
                             <p><small>@item.Product.Name</small></p>
-                            <h5>起司 Size</h5>
+                            <h5>起司 Cheese</h5>
                             <p><small>@item.Cheese</small></p>
                             <h5>餅皮 Crust</h5>
                             <p><small>@item.Crust</small></p>
