--- a/PizzaDemo/Areas/Customer/Views/Home/Details.cshtml
+++ b/PizzaDemo/Areas/Customer/Views/Home/Details.cshtml
@@ -25,31 +25,31 @@
                                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
-                                            <label class="form-check-label" for="SmallSize">
+                                            <label class="form-check-label" for="MozzarellaCheese">
                                                 莫札瑞拉起司 Mozzarella Cheese
                                             </label>
-                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="MozzarellaCheese" value="小 Small" checked>
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="MozzarellaCheese" value="莫札瑞拉起司 Mozzarella Cheese" checked>
                                         </div>
                                         <hr />
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
-                                            <label class="form-check-label" for="MediumSize">
+                                            <label class="form-check-label" for="Parmesan">
                                                 帕馬森起司 Parmesan
                                             </label>
-                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="Parmesan" value="中 Medium">
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="Parmesan" value="帕馬森起司 Parmesan">
                                         </div>
                                         <hr />
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
-                                            <label class="form-check-label" for="LargeSize">
+                                            <label class="form-check-label" for="SwissCheese">
                                                 瑞士起司 Swiss Cheese
                                             </label>
-                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="SwissCheese" value="大 Large">
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="SwissCheese" value="瑞士起司 Swiss Cheese">
                                         </div>
                                         <hr />
                                         <div class="form-check ps-1 my-3 d-flex justify-content-between">
-                                            <label class="form-check-label" for="FamilySize">
+                                            <label class="form-check-label" for="NoCheese">
                                                 無起司 No Cheese
                                             </label>
-                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="No Cheese" value="家庭號 Family Size">
+                                            <input asp-for="Cheese" class="form-check-input" type="radio" name="cheese" id="NoCheese" value="無起司 No Cheese">
                                         </div>
                                         <hr />
                                     </div>
